@@ -1,4 +1,5 @@
 0.7.1 - currently working on
+- [#3768] Fix: Relations to FE user groups with the UID 0 should be ignored
 - [#3741] Fix: PID in page type error message displayed as "Array"
 - [#3710] Change: Use self:: for static calls within the same class
 - [#3734] Fix: List::getUids and ::hasUid need to react to changes
